feat: Improve PropertyDetail page with semantic HTML, modal contact form, red button styling, and Button component integration. Add SCSS variable for red and ensure proper variable imports.

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -5,6 +5,7 @@ $error-bg: #fff0f0;
 $text-dark: #222;
 $text-light: #888;
 $border-light: #eee;
+$red-primary: #bc3b3b;
 
 // Spacing
 $spacing-xs: 0.25rem;
