--- a/src/components/styles.css
+++ b/src/components/styles.css
@@ -87,7 +87,8 @@ h1 a {
 
 .map {
   width: 100%;
-  height: calc(100vh - 200px);
+  /* height: calc(100vh - 200px); */
+  height:100vh;
 }
 
 .leaflet-container {
