--- a/src/pages/Dashboard/Dashboard.module.scss
+++ b/src/pages/Dashboard/Dashboard.module.scss
@@ -27,8 +27,8 @@
     gap: 1.2rem;
     overflow-x: auto;
     padding-bottom: 0.5rem;
-    scrollbar-width: thin;
-    scrollbar-color: var(--primary-red) var(--background-tertiary);
+    // scrollbar-width: thin;
+    // scrollbar-color: var(--primary-red) var(--background-tertiary);
   }
 }
 
