--- a/src/components/styles.css
+++ b/src/components/styles.css
@@ -530,3 +530,16 @@ h1 a {
     font-size: 0.9rem;
   }
 }
+
+.mobile-search-dropdown {
+  position: absolute;
+  left: 0px;
+  box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.08);
+  transition: opacity 0.25s ease, transform 0.25s ease;
+  opacity: 1;
+  background: #fff;
+  z-index: 1001;
+  width: 100vw;
+  max-width: 100vw;
+
+}
