--- a/src/components/styles.css
+++ b/src/components/styles.css
@@ -543,3 +543,7 @@ h1 a {
   max-width: 100vw;
 
 }
+
+.breadcrumb-menu, .breadcrumb-menu li, .breadcrumb-menu a, .breadcrumb-menu button {
+  font-size: 1rem;
+}
